saving 1.2.1 base